Update 'iubrz28nc-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:76b45c2d2119a2ec94226e5996881209ec6fd554@sha256:125f4fb2befe2e48c6af65d8610ae04acb164553942adc3614777b70436a0159

--- a/components/iubrz28nc-python/overlays/development/deployment-patch.yaml
+++ b/components/iubrz28nc-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: iubrz28nc-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:76b45c2d2119a2ec94226e5996881209ec6fd554@sha256:125f4fb2befe2e48c6af65d8610ae04acb164553942adc3614777b70436a0159
+          name: container-image
